tests/ill_typed/ret_type.mist
def foo(): Int = "3"